--- a/finalwork/index.html
+++ b/finalwork/index.html
@@ -15,6 +15,7 @@
  <script src="bomb_destroyer.js"></script>
  <script src="script.js"></script>
  <script src="bombergenerator.js"></script>
+ <!-- <script src="stats.js"></script> -->
 </head>
 <body>
   <p>Yellow - GrassEater</p>
@@ -22,6 +23,8 @@
   <p>Black-Bomber</p>
   <p>Blue-BomberGenerator</p>
   <p>Turquoise-BombDestroyer</p>
+  <p>Winter-White</p>
+  <p>Green-Summer</p>
   
 </body>
 </html>
